--- a/Sis_457SMBJC/CpSis457/CpSis457.csproj
+++ b/Sis_457SMBJC/CpSis457/CpSis457.csproj
@@ -161,6 +161,21 @@
   <ItemGroup>
     <None Include="Resources\camion-de-reparto.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menos.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\borrar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\x %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\licor.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
