--- a/Sis_457SMBJC/ClnSis457/ClnSis457.csproj
+++ b/Sis_457SMBJC/ClnSis457/ClnSis457.csproj
@@ -48,9 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClienteCl.cs" />
     <Compile Include="ProductoCl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VentaDetallecl.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CadSis457\CadSis457.csproj">
