--- a/Sis_457SMBJC/CpSis457/CpSis457.csproj
+++ b/Sis_457SMBJC/CpSis457/CpSis457.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="FrmProducto.resx">
       <DependentUpon>FrmProducto.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,6 +203,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\buscaroriginal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\barril.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
