--- a/Sis_457SMBJC/ClnSis457/ClnSis457.csproj
+++ b/Sis_457SMBJC/ClnSis457/ClnSis457.csproj
@@ -48,13 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clientecl.cs" />
-    <Compile Include="Empleadocl.cs" />
-    <Compile Include="ProductoCl.cs" />
+    <Compile Include="ClienteCln.cs" />
+    <Compile Include="EmpleadoCln.cs" />
+    <Compile Include="ProductoCln.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuariocl.cs" />
-    <Compile Include="Ventacl.cs" />
-    <Compile Include="VentaDetallecl.cs" />
+    <Compile Include="UsuarioCln.cs" />
+    <Compile Include="VentaCln.cs" />
+    <Compile Include="VentaDetalleCln.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CadSis457\CadSis457.csproj">
